--- a/_config.yml
+++ b/_config.yml
@@ -5,12 +5,12 @@ description: Welcome to Xixia！
 
 # url is currently only used only for the RSS feed in feed.xml
 url: https://github.com/wArrest/wArrest.github.io
-
+# https://github.com/zxixia/jekyll-xixia
 # baseurl will often be '', but for a project page on gh-pages, it needs to
 # be the project name.
 # *** IMPORTANT: If your local "jekyll serve" throws errors change this to '' or
 #     run it like so: jekyll serve --baseurl=''
-baseurl: '/jekyll-xixia'
+baseurl: '/wArrest.github.io'
 ## default date_format
 date_format: 
   title: "%B-%-d-%Y"
