--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Jekyll configuration
 
-name: Xixia
-description: Welcome to Xixia！
+name: wArrest
+description: Welcome to wArrest！
 
 # url is currently only used only for the RSS feed in feed.xml
 url: https://github.com/wArrest/wArrest.github.io
