--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ head-title: Your blog
 title: Your blog
 
 baseurl: "/warrest.github.io"    # the subpath of your site, "/blog"
-url: ""
+url: "warrest.github.io"
 
 # footer 
 description: "I know that what I'm doing looks stupid, but I'm a big boy and really want to do this."
