--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 author: wArrest
 email: 1275591716@qq.com
 twitter_username: twitter
-github_username:  github
+github_username:  wArrest
 googleplus_username: google
 
 head-title: wArrest's Blog
