--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings 配置站点
-title: '廖柯宇的独立博客'
-description: '昵称悟空，千禧一代，前端开发者/伪极客/灵魂摄影师，热爱技术&设计。很高兴能在这里与你分享我对技术和生活的思考。'
-keyword: '廖柯宇, 廖柯宇的独立博客, 廖柯宇的博客, 前端, 前端开发, 前端博客, javascript, vuejs, nodejs, 设计'
-url: 'http://liaokeyu.com' # your host
+title: wArrest's blog
+description: '王路程，外号二狗，在校计算机专业大学生一枚，暂时不会啥高深的技术，但是很高兴可以在这里与你分享我对技术和生活的思考。'
+keyword: '王路程, 王路程的独立博客, 王路程的博客, 前端, 前端开发, 前端博客, javascript, php,vuejs, nodejs, 设计'
+url: 'http://wArrest.github.io' # your host
 
 # if you don't need baseurl, you should leave this value blank.
-baseurl: ''
+baseurl: '/wArrest.github.io'
 
 # Navigation links
 nav:
@@ -17,9 +17,9 @@ footer:
   since: 2017
 
 # Author 配置博主信息
-author: '廖柯宇'
-nickname: '悟空'
-bio: '前端开发者，热爱技术&设计，简单乐观爱创造'
+author: '王路程'
+nickname: '二狗'
+bio: '大学生，热爱技术&热爱生活'
 avatar: '/assets/img/profile.png'
 
 # Search
@@ -50,7 +50,7 @@ social-share: true
 social-share-items: ['wechat', 'weibo', 'douban', 'twitter']
 
 # theme color 主题皮肤
-theme-color: 'default'  # pink or default
+theme-color: 'pink'  # pink or default
 
 # Post header background patterns (when the post no cover): circuitBoard, overlappingCircles, food, glamorous, ticTacToe, seaOfClouds
 postPatterns: 'circuitBoard'
