--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,12 @@ baseurl: '/wArrest.github.io'
 # Navigation links
 nav:
   首页: '/'
+  关于我: '/about.html'
+  作品: '/work'
   归档: '/categories.html'
   标签: '/tags.html'
+  日志: '/log'
+  友情链接: '/friendLink.html'
 
 # Footer
 footer:
@@ -40,8 +44,8 @@ livere_uid: MTAyMC8yODEwMC80Njcz
 reward:
   enable: true
   reward_comment: '真诚赞赏 手有余香'
-  wechatpay: 'http://ray-eldath.image.alimmdn.com/basic/wechatpay.jpg'
-  alipay: 'http://ray-eldath.image.alimmdn.com/basic/alipay.jpg'
+  wechatpay: 'http://wArrest.github.io/img/assets/img/wechat.png'
+  alipay: 'http://wArrest.github.io/img/assets/img/qqpay.png'
 
 # b2t 回到顶部 by Ray-Eldath
 b2t: true
