--- a/_config.yml
+++ b/_config.yml
@@ -44,8 +44,8 @@ livere_uid: MTAyMC8yODEwMC80Njcz
 reward:
   enable: true
   reward_comment: '真诚赞赏 手有余香'
-  wechatpay: 'http://wArrest.github.io/img/assets/img/wechat.png'
-  alipay: 'http://wArrest.github.io/img/assets/img/qqpay.png'
+  wechatpay: 'https://warrest.github.io/assets/img/wechat.png'
+  alipay: 'https://warrest.github.io/assets/img/qqpay.png'
 
 # b2t 回到顶部 by Ray-Eldath
 b2t: true
