--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ reward:
   enable: true
   reward_comment: '真诚赞赏 手有余香'
   wechatpay: 'https://warrest.github.io/assets/img/wechat.png'
-  alipay: 'https://warrest.github.io/assets/img/qqpay.png'
+  alipay: 'https://warrest.github.io/assets/img/1519376486914.jpg'
 
 # b2t 回到顶部 by Ray-Eldath
 b2t: true
