--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ disqus: false
 disqus_url: 'https://liaokeyu.disqus.com/embed.js'
 
 livere: true
-livere_uid: MTAyMC8yODEwMC80Njcz
+livere_uid: MTAyMC8zNDI5OS8xMDgzNg==
 
 # Reward 赞赏功能 by Ray-Eldath
 reward:
@@ -63,7 +63,7 @@ postPatterns: 'food'
 # SNS settings 配置社交网站url: email, weibo, zhihu, twitter, instagram, juejin, github, douban, facebook, dribble, uicn, jianshu, medium, linkedin
 sns:
   email: '1275591716@qq.com'
-  weibo: '//weibo.com/lovecolcol'
+  weibo: '//weibo.com/u/5754260018'
   juejin: '//juejin.im/user/57a6f434165abd006159b4cc'
   instagram: '//www.instagram.com/steveliaocn'
   github: '//github.com/wArrest'
