--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ baseurl: '/wArrest.github.io'
 nav:
   首页: '/'
   关于我: '/about.html'
-  作品: '/work'
+  作品: '/work.html'
   归档: '/categories.html'
   标签: '/tags.html'
-  日志: '/log'
+  日志: '/logs.html'
   友情链接: '/friendLink.html'
 
 # Footer
