--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,8 @@ nav:
   首页: '/'
   关于我: '/about.html'
   作品: '/work.html'
-  归档: '/categories.html'
+  分类: '/classify.html'
+  归档: '/archive.html'
   标签: '/tags.html'
   友情链接: '/friendLink.html'
 
