--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ baseurl: '/wArrest.github.io'
 nav:
   首页: '/'
   关于: '/about.html'
-  作: '/work.html'
+  作品: '/work.html'
   分类: '/classify.html'
   归档: '/archive.html'
   标签: '/tags.html'
