--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: wArrest's blog
 description: '小笨笨，一个又可爱又神秘的人。喜欢hiphop，喜欢悠哉游哉的生活。。。'
 keyword: '郭博洋，大数据开发工程师'
-url: 'http://wArrest.github.io' # your host
+url: 'http://cutebenben.github.io' # your host
 
 # if you don't need baseurl, you should leave this value blank.
 baseurl: '/cutebenben.github.io'
