--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings 配置站点
-title: wArrest's blog
+title:小笨笨
 description: '小笨笨，一个又可爱又神秘的人。喜欢hiphop，喜欢悠哉游哉的生活。。。'
 keyword: '郭博洋，大数据开发工程师'
 url: 'http://cutebenben.github.io' # your host
