--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer:
 # Author 配置博主信息
 author: '郭博洋'
 nickname: '小笨笨'
-bio: 'rapper，热爱技术&热爱生活'
+bio: '做一个爱技术，爱音乐，爱生活的rapper'
 avatar: '/assets/img/profile.png'
 
 # Search
