--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings 配置站点
 title:小笨笨
-description: '小笨笨，一个又可爱又神秘的人...'
+description:  '王路程，外号二狗，在校计算机专业大学生一枚，暂时不会啥高深的技术，但是很高兴可以在这里与你分享我对技术和生活的思考。'
 keyword: '郭博洋，大数据开发工程师'
 url: 'http://cutebenben.github.io' # your host
 
